<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEvent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_add_a_new_event"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/event_mandatory_fields"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_title"
                android:textStyle="bold"
                android:layout_marginTop="14dp"
                android:layout_marginStart="15dp"
                android:textSize="15sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_title"
                android:id="@+id/edTxtEventTitle"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_description"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:textSize="15sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_description"
                android:id="@+id/edTxtEventDescription"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/event_type"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <Spinner
                    android:id="@+id/spinnerEventType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_max_nr_attendees"
                    android:textSize="15sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_attendees_number"
                    android:id="@+id/edTxtEventAttendees"
                    android:layout_marginStart="10dp"
                    android:textSize="14sp"
                    android:inputType="number"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_time"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_date"
                    android:textSize="14sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_date"
                    android:id="@+id/edTxtEventDate"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:textSize="14sp"
                    android:focusable="false"
                    android:clickable="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_start_time"
                    android:textStyle="bold"
                    android:textSize="14sp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:minWidth="50dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/event_start_time_field"
                    android:id="@+id/edTxtEventStartTime"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="14sp"
                    android:focusable="false"
                    android:clickable="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_duration"
                    android:textStyle="bold"

                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/edTxtEventDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/event_duration"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_minutes"
                    android:textSize="14sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_images"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/first_image_annotation"
                android:textColor="@color/dark_gray"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/event_images_uploaded"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_upload_image"
                        android:textSize="14sp"/>

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnUploadImage"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/plus_icon"
                        app:fabCustomSize="20dp"
                        app:maxImageSize="10dp"
                        android:backgroundTint="@color/dark_gray"
                        android:layout_gravity="center_vertical"
                        app:rippleColor="@color/darker_gray"/>

                </LinearLayout>
            </LinearLayout>
            <ListView
                android:id="@+id/imagesListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="60dp"
                android:scrollbars="none"
                android:isScrollContainer="false"
                android:layout_marginEnd="60dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_links"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/event_new_link"
                    android:textSize="15sp"/>

                <EditText
                    android:id="@+id/edTxtEventLinkName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/event_link_name"
                    android:layout_marginStart="10dp"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/edTxtEventLinkURL"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:hint="@string/event_url"
                    android:layout_marginStart="10dp"
                    android:textSize="14sp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btnUploadLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus_icon"
                    app:fabCustomSize="20dp"
                    app:maxImageSize="10dp"
                    android:backgroundTint="@color/dark_gray"
                    android:layout_gravity="center_vertical"
                    app:rippleColor="@color/darker_gray"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"                android:text="@string/event_links_uploaded"
                android:textSize="14sp" />
            <ListView
                android:id="@+id/linkListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="60dp"
                android:scrollbars="none"
                android:isScrollContainer="false"
                android:layout_marginEnd="60dp"/>
            <Button
                android:id="@+id/btnAddEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_add_button_text"
                android:layout_gravity="end"
                android:textSize="14sp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>