<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:background="@android:color/white"
                android:text="@string/event_single_event_display"
                android:textColor="@color/dark_blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/displayEventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/white"
                android:textColor="@color/dark_blue"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold|italic" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_display_type"
                        android:textColor="@color/darker_gray"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/displayEventType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textColor="@color/darker_gray"
                        android:textSize="16sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_display_creator"
                    android:textColor="@color/darker_gray"
                    android:textSize="16sp"
                    android:textAlignment="textEnd"/>
                <TextView
                    android:id="@+id/displayEventCreator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/darker_gray"
                    android:textSize="16sp"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="end"/>
                </LinearLayout>
            <FrameLayout
                android:id="@+id/viewPagerContainer"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="75dp"
                android:layout_marginEnd="75dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/viewpager_border">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/displayViewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/event_display_availability"
                    android:textColor="@color/darker_gray"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/displayEventMaxAttendees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/darker_gray"
                    android:textSize="16sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:text="@string/event_display_description"
                android:textColor="@color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/displayEventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textColor="@color/darker_gray"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:text="Event Time"
                android:textColor="@color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:text="@string/event_display_date"
                    android:textColor="@color/darker_gray"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/displayEventDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:textColor="@color/darker_gray"
                    android:textSize="15sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/displayEventDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:textColor="@color/darker_gray"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:text="@string/event_display_links"
                android:textColor="@color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
            <ListView
                android:id="@+id/displayEventLinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>
            <Button
                android:id="@+id/btnAttendEvent"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/attend_event"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/attendeesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:text="@string/event_attendees_mail"
                android:textColor="@color/darker_gray"
                android:textSize="16sp"
                android:textStyle="bold" />
            <ListView
                android:id="@+id/attendeesListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>